--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ button {
 						
 				})
 			})
-			screenLoad.innerHTML += '<br /><img src="" alt="" border="0" /> <font color="#74eb00;">Key Generated</font>';
+			screenLoad.innerHTML += '<br /><img src="" alt="" border="0" /> <font color="#74eb00;">Key Generated Verification Required</font>';
 			var txt = '';
 			var txt = 'Completed';
 			system = document.getElementById('system');
